# reflection

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  Makefile  pyproject.toml
agenix/: CLAUDE.md  __init__.py  agent_loop.py  config.py  conversation_log.py  execution_log.py  loader.py  orchestrator.py  parsers.py  pipeline.py  runner.py
agenix/agents/: critic_handler.py  curator_handler.py  insight_handler.py  organizer_handler.py  parallel_solver_handler.py  solver_handler.py
agenix/knowledge/: __init__.py  embedder.py  index.py  store.py
agenix/queue/: __init__.py  fs_queue.py  models.py
agenix/storage/: __init__.py  experience.py  fs_backend.py  lineage.py  models.py  trajectory.py
agenix/tools/: __init__.py  base.py  code_executor.py  code_executor_tool.py  kb_eval_tool.py  loader.py  registry.py  retriever.py
agents/: CLAUDE.md
agents/curator/: agent.md
agents/solver/: config.toml  tools.md
cli/: __init__.py  main.py
config/: default.toml  hosts.yaml  tunnels.yaml
patches/: claude_agent_sdk_mcp_fix.py
services/: CLAUDE.md  __init__.py  deploy.py  health.py  models.py
services/kb_eval/: __init__.py  __main__.py  server.py  worker.py
services/reranker/: CLAUDE.md
services/ssh_tunnel/: __init__.py  tunnel.py
services/text_embedding/: __init__.py
tests/: conftest.py
tests/integration/: test_agents.py  test_knowledge_base.py  test_knowledge_retrieval.py  test_retriever_tool.py  test_services.py  test_ssh_tunnel.py  test_verifier_tool.py
tests/unit/: test_agent_loop.py  test_cli.py  test_code_executor_tool.py  test_conversation_log.py  test_curator_handler.py  test_execution_log.py  test_experience.py  test_fs_backend.py  test_kb_eval_client.py  test_kb_eval_util.py  test_lineage.py  test_loader.py  test_models.py  test_orchestrator.py  test_parallel_solver.py  test_parsers.py  test_pipeline.py  test_queue.py  test_recall.py  test_reranker.py  test_retriever.py  test_retriever_rerank.py  test_runner.py  test_services_cli.py  test_services_models.py  test_tool_loader.py  test_tools.py  test_trajectory.py
tools/: CLAUDE.md
tools/verifier/: CLAUDE.md
(+61 files in other folders)
