[project]
name = "reflection"
version = "0.1.0"
description = "Self-evolving autonomous multi-agent system for coding problems"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.44",
    "pydantic>=2.0",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "aiosqlite>=0.20",
    "typer>=0.12",
    "structlog>=24.0",
    "tomli>=2.0;python_version<'3.11'",
    "tomli-w>=1.0",
]

[project.scripts]
reflection = "cli.main:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.hatch.build.targets.wheel]
packages = ["agenix", "cli"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
